--- a/功能需求.md
+++ b/功能需求.md
@@ -1,3 +1,19 @@
+一些参考文章：
+https://blog.csdn.net/Marseill_world?t=1
+
+https://blog.csdn.net/chenjing928/article/details/80367320 自适应
+https://blog.csdn.net/hhn_hn/article/details/98599249 marker 添加事件
+
+https://blog.csdn.net/ywy_wc/article/details/88617702 树组件样式
+
+https://blog.csdn.net/songlinlin_/article/details/98495129 信息窗体相关
+https://blog.csdn.net/u013144287/article/details/84583950
+
+设备展示和地图联动，点击设备地图定位到 marker
+点击 --> 获取到经纬度 --> 提交到 store --> map 组件监控 store 里的变量 --> 重新 set 地图的中心点
+
+marker 鼠标移入展示信息
+
 功能：
 
 - 设备点位展示
