--- a/资料.md
+++ b/资料.md
@@ -9,10 +9,7 @@ https://blog.csdn.net/ywy_wc/article/details/88617702 树组件样式
 https://blog.csdn.net/songlinlin_/article/details/98495129 信息窗体相关
 https://blog.csdn.net/u013144287/article/details/84583950
 
-设备展示和地图联动，点击设备地图定位到 marker
-点击 --> 获取到经纬度 --> 提交到 store --> map 组件监控 store 里的变量 --> 重新 set 地图的中心点
-
-marker 鼠标移入展示信息
+https://www.makeapie.com/explore.html#sort=rank~timeframe=all~author=all 可视图表
 
 功能：
 
@@ -48,3 +45,29 @@ marker 鼠标移入展示信息
 电量百分比展示
 
 移入点位时，悬浮穿展示电量，模式，亮度，闪烁频率，桩号
+
+鼠标移入展示信息：
+https://blog.csdn.net/well2049/article/details/76697203/
+https://blog.csdn.net/gzyh_tech/article/details/90724828
+：
+
+模式选中
+https://juejin.cn/post/6918921604160290830 边框动画
+
+参数设置的界面
+axios的并发？ 
+设置参数的请求方法，单点和多点的控制
+
+
+https://juejin.cn/post/6844904100547526670
+https://juejin.cn/post/6844903652881072141 axios 封装
+https://blog.langting.top/archives/73.html
+
+https://www.crazyming.com/note/475/ axios基本
+https://juejin.cn/post/6844903927054499847
+
+
+代办：
+axios的封装，能并发请求
+参数设置界面
+
