--- a/资料.md
+++ b/资料.md
@@ -69,5 +69,217 @@ https://juejin.cn/post/6844903927054499847
 
 代办：
 axios的封装，能并发请求
-参数设置界面
+参数设置界面:
+自动: 暂缓
+强化：亮度  颜色        红 黄 红黄
+诱导：亮度 频率  颜色        红 黄 红黄
+追尾：亮度 延时时间
+节能和灭灯：界面不知道搞点啥
 
+整理：
+## 1.请求体
+{
+  "cmd":唯一命令号
+  "id":设备ID
+  "buff":具体参数
+}
+
+## 2.云控灯模式
+轮廓强化   1
+行车诱导   2
+灭灯       3
+尾跟       4
+节能       5
+全自动     6
+
+## 3.灯设置/获取模式
+{
+  "cmd":1000 设置  1001获取
+  "id":设备ID
+  "buff":{
+    "mode": 1
+  }
+}
+成功 ret 1  失败 0
+
+获取
+{
+  "cmd":1001
+  "id":设备ID
+  "buff":{
+    
+  }
+}
+
+## 4.参数设置
+//轮廓强化
+{
+  "cmd":1002
+  "id":设备ID
+  "buff":{
+    "mode": 1,
+    "param": {
+      "level": 20,  亮度
+      "gp": 1       1--红  2--黄  3--红黄
+    }
+  }
+}
+
+//主动诱导
+{
+  "cmd":1002
+  "id":设备ID
+  "buff":{
+    "mode": 2,
+    "param": {
+      "level": 10~100,  亮度
+      "blink":30 60 120 频率
+      "gp": 1       1--红  2--黄  3--红黄
+    }
+  }
+}
+
+//防追尾
+{
+  "cmd":1002
+  "id":设备ID
+  "buff":{
+    "mode": 4,
+    "param": {
+      "level": 10~100,  亮度
+      "delay":延时时间 单位s
+    }
+  }
+}
+
+//自动
+{
+  "cmd":1002
+  "id":设备ID
+  "buff":{
+    "mode": 6,
+    "param": {
+      "level": 10~100,  亮度
+      "hourofmode":代表各个模式的字符串，24byte    暂时有点迷糊
+    }
+  }
+}
+
+//灭灯和节能
+{
+  "cmd":1002
+  "id":设备ID
+  "buff":{
+    "mode": 3灭灯 5节能
+    "param": {
+      
+    }
+  }
+}
+
+## 5.参数获取
+{
+  "cmd":1003
+  "id":设备ID
+  "buff":{
+    "mode": 1 //获取轮廓强化参数
+  }
+}
+
+## 6.灯状态改变
+{
+  "cmd":1004
+  "id":设备ID
+  "buff":{
+    "mode": 1  //不包括全自动
+    "param": {
+      xxx
+    },
+    "status": 1倾倒   0 正常
+  }
+}
+
+## 7.改变经纬度
+{
+  "cmd":1005
+  "id":设备ID
+  "buff":{
+    "lon":{
+      "num": 103.977311,
+    },
+    "lat":{
+      "num": 30.633911,
+    },
+  }
+}
+
+## 8.电池信息
+{
+  "cmd":1006
+  "id":设备ID
+  "buff":{
+    "voltage": 12.2  //电压数值
+  }
+}
+
+## 9.电池信息
+{
+  "cmd":1007
+  "id":设备ID
+  "buff":{
+    "battery_freq":5,     电池状态推送频率
+    "location_freq":5,    位置信息推送频率
+    "led_freq":5,         灯状态推送频率
+  }
+}
+
+## 10.心跳包
+{
+  "cmd":1008
+  "id":设备ID
+  "buff":{
+    
+  }
+}
+
+## 11.远程重启
+{
+  "cmd":1009
+  "id":设备ID
+  "buff":{
+    
+  }
+}
+
+## 12.升级检测
+{
+  "cmd":1010
+  "id":设备ID
+  "buff":{
+    "version": 1.21  回复ret 1需要升级 0不需要升级
+  }
+}
+
+## 12.文件下载
+先发md5校验码及大小；40bytes = 32位校验码+8位的升级包大小，不够8位，前补0。然后再以每包256字节分包循环发送
+body回复参数：
+{
+“bytes”:1856,
+“ret”:1
+}
+参数说明：
+bytes:升级包大小
+ret:md5校验，1--校验通过；0--校验失败
+
+
+
+示例：
+
+{"cmd":1000,"id":155662132,"buff":{"mode":1}}
+{"cmd":1001,"id":155662132,"buff":{}}
+{"cmd":1002,"id":155662132,"buff":{"mode":1,"param":{"level":50,"gp":2}}}
+{"cmd":1002,"id":155662132,"buff":{"mode":2,"param":{"level":100,"gp":3,"blink":60}}}
+{"cmd":1003,"id":155662132,"buff":{"mode":6,"param":{"level":100,"gp":3,"blink":60}}}
+{"cmd":1009,"id":155662132,"buff":{"location_freq":1,"battery_freq":2,"led_freq":3}}
+
+{"cmd":1000,"id":1190967555,"buff":{"mode":1}}
